# contract/types.ts
@@ -5,6 +5,7 @@ export type Address = components['schemas']['Address']
 export type AppointmentDetails = components['schemas']['AppointmentDetails']
 export type AppointmentCreateRequest = components['schemas']['AppointmentCreateRequest']
 export type AppointmentUpdateRequest = components['schemas']['AppointmentUpdateRequest']
+export type AppStatus = components['schemas']['AppStatus']
 export type Billing = components['schemas']['Billing']
 export type ClinicBrief = components['schemas']['ClinicBrief']
 export type ClinicDetails = components['schemas']['ClinicDetails']
